# arxiv-atlas

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml  evals.yml  ingest.yml
atlas-mcp/: README.md  pyproject.toml
atlas-mcp/src/atlas_mcp/: __init__.py  client.py  server.py
atlas-mcp/tests/: test_client.py  test_server.py
docker/: Dockerfile.api
docs/adr/: 0001-scope.md  0002-framework-free-harness.md  0003-research-copilot-pivot.md  0004-versioned-mcp-surface.md  0005-no-bridge-tool.md
evals/: README.md  baseline.json  baseline.py  golden_set.py  history.json  judge.py  run_evals.py
evals/golden/: adversarial-citation-counts.yaml  adversarial-false-premise.yaml  agent-evaluation.yaml  ambiguous-make-it-faster.yaml  ambiguous-scaling.yaml  ambiguous-transformers.yaml  comparison-diffusion-vs-autoregressive.yaml  comparison-lora-full-finetune.yaml  comparison-rag-vs-long-context.yaml  empty-corpus-region.yaml  injection-in-abstracts.yaml  injection-in-question.yaml  kv-cache-compression.yaml  llm-agent-memory.yaml  long-context-eval.yaml  low-bit-quantization.yaml  moe-training.yaml  multilingual-low-resource.yaml  out-of-scope-crispr.yaml  out-of-scope-pre-window.yaml  out-of-scope-stock-prediction.yaml  preference-optimization.yaml  process-mining-llms.yaml  rag-hallucination.yaml  reasoning-rl.yaml  small-model-distillation.yaml  specific-topic-swe-agents.yaml  specific-topic-watermarking.yaml  speculative-decoding.yaml  ssm-vs-transformers.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  CitationGraph.tsx  EvalHistory.tsx  GraphExplorer.tsx  LandscapeView.tsx  ResearchMap.tsx  StatusPage.tsx  TracePanel.tsx  api.ts  citations.tsx  demo.test.ts  demo.ts  demoRuns.json  evalHistory.test.ts  graphMerge.test.ts  graphMerge.ts  index.css  palette.ts  steps.ts  useDarkMode.ts
infra/: atlas.caddyfile  template.yaml
scripts/: deploy_frontend.sh  dev_api.py  export_onnx.py  rollback.sh  smoke_bedrock.py  smoke_live.sh
src/atlas_agents/: __init__.py  ask.py  bedrock.py  harness.py  landscape.py  tracing.py
src/atlas_agents/prompts/: __init__.py  check.yaml  direction.yaml  extractor.yaml  judge.yaml  landscape.yaml  planner.yaml  reranker.yaml  synthesizer.yaml
src/atlas_agents/steps/: __init__.py  directions.py  evidence.py  extractor.py  planner.py  reranker.py  retriever.py  synthesizer.py
src/atlas_api/: __init__.py  app.py  dynamo.py  jobs.py  lambda_handler.py  v1.py
src/atlas_core/: __init__.py  budget.py  cache.py  cluster.py  config.py  costs.py  embedding.py  features.py  graph.py  models.py  ratelimit.py  vectorstore.py
src/atlas_ingest/: __init__.py  arxiv_client.py  dedupe.py  pipeline.py  validate.py
tests/: conftest.py
tests/fixtures/: arxiv_page.xml
tests/integration/: test_api.py  test_pipeline.py
tests/model/: test_embedding_contract.py
tests/unit/: test_arxiv_client.py  test_ask.py  test_baseline.py  test_bedrock.py  test_budget.py  test_cache.py  test_cluster.py  test_config.py  test_dedupe.py  test_dynamo.py  test_extractor.py  test_features.py  test_golden_set.py  test_graph.py  test_harness.py  test_injection.py  test_judge.py  test_landscape.py  test_package.py  test_pipeline.py  test_planner.py  test_prompts.py  test_ratelimit.py  test_reranker.py  test_retriever.py  test_synthesizer.py  test_tracing.py  test_v1.py  test_validate.py  test_vectorstore.py
