[project]
name = "arxiv-atlas"
version = "0.1.0"
description = "Autonomous multi-agent system that maps new AI research from arXiv into a live semantic graph."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tushar Yadav" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "httpx>=0.27",
    "numpy>=1.26",
    "qdrant-client>=1.12",
    "pyarrow>=17",
]

[project.optional-dependencies]
# Heavy (pulls torch); only needed where embeddings are computed, i.e. the ingestion runner.
ingest = ["sentence-transformers>=3.0"]
agents = [
    "anthropic[bedrock]>=0.92",
    "langfuse>=3.0",
    "pyyaml>=6.0",
]
# The query API. Pulls agents (ask() runs on the Bedrock client); the ONNX embedder backend
# and the Mangum/Lambda adapter join when the deploy commits land.
api = [
    "arxiv-atlas[agents]",
    "fastapi>=0.115",
]

[project.scripts]
atlas-ingest = "atlas_ingest.pipeline:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_core", "src/atlas_ingest", "src/atlas_agents", "src/atlas_api"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "evals"]

[[tool.mypy.overrides]]
module = ["pyarrow.*", "sentence_transformers.*", "yaml", "langfuse.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not model'"
markers = [
    "model: needs the real embedding model downloaded; run explicitly with -m model",
]

[tool.coverage.run]
source = ["atlas_core", "atlas_ingest", "atlas_agents", "atlas_api"]

[tool.coverage.report]
show_missing = true
