[project]
name = "arxiv-atlas-mcp"
version = "0.1.0"
description = "MCP server exposing the ArXiv Atlas semantic research graph as agent tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tushar Yadav" }]
keywords = ["mcp", "arxiv", "research", "semantic-search", "llm-tools"]

# Two runtime deps on purpose: the MCP SDK and an HTTP client. The server holds no model, no
# vector store, no AWS; it calls the deployed Atlas API. SDK pinned per the pre-flight D21.
dependencies = [
    "mcp==1.28.1",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://atlas.tusharyadav.dev"
Source = "https://github.com/IamTusharYadav/arxiv-atlas"

[project.scripts]
arxiv-atlas-mcp = "atlas_mcp.server:main"

[dependency-groups]
dev = ["pytest>=8", "mypy>=1.11", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_mcp"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
files = ["src", "tests"]
